# cmake-project-template

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/buildscript/: prepare-env.sh
app/inc/: Dummy.hpp
app/ut/: CMakeLists.txt  TestDummy.cpp
scripts/: prepare-env.sh
tests/ut/: CMakeLists.txt  TestDummy.cpp
